# 3DResearch

./: .gitignore  gt_df_results.csv  open3d.ipynb  outliers.csv  pyproject.toml  sync_camera.py  valdata_sunrgb_data_analysis .ipynb
3d_visualizations/: 000001_bbox.npy  000001_pc.npz  000002_bbox.npy  000002_pc.npz  000003_bbox.npy  000003_pc.npz  000004_bbox.npy  000004_pc.npz  000005_bbox.npy  000005_pc.npz  000006_bbox.npy  000006_pc.npz  000007_bbox.npy  000007_pc.npz  000008_bbox.npy  000008_pc.npz  000009_bbox.npy  000009_pc.npz  000010_bbox.npy  000010_pc.npz  000011_bbox.npy  000011_pc.npz  000012_bbox.npy  000012_pc.npz  000013_bbox.npy  000013_pc.npz  000014_bbox.npy  000014_pc.npz  000015_bbox.npy  000015_pc.npz  000016_bbox.npy  000016_pc.npz  000017_bbox.npy  000017_pc.npz  000018_bbox.npy  000018_pc.npz  000019_bbox.npy  000019_pc.npz  000020_bbox.npy  000020_pc.npz
