[tool.poetry]
name = "3dresearch"
version = "0.1.0"
description = ""
authors = ["ZhiZhangT <zztee24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
open3d = "^0.18.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
